@@ -1,4 +1,5 @@
 Development
+    Add command line option, --replace_and_play that switches single instance mode into single item mode
     Updated Turkish translation
     Keep blank items from appearing in Subtitle and Audio language menus
     Add new menu Edit->Select Audio Language, should work on DVD and mkv files
